Fix encoding build error